# ets

./: .gitignore  .mcp.json  CLAUDE.md  MANUAL.md  README.md  TODO.md  app.py  configure.command  ets_framework.py  pe.command  pyproject.toml  requirements.txt  run.command  tmp_template.json  vercel.json
api/: index.py
docs/: algorithm-overview.md  banking-equilibrium.md  blocks-composition-rules.md  blocks-graph-plan.md  carbon-cap-rule.md  data-model.md  feature-modules-plan.md  feedback-coupling.md  feedback-price-elastic-baseline.md  floor-cancellation-fix.md  forward-transmission.md  joint-equilibrium-plan.md  joint-equilibrium.md  joint-model-guide.md  k-msr-condensed.md  k-msr-full-translation-ko.md  k-msr-vs-repo-comparison.md  mac-abatement.md  market-equilibrium.md  multi-commodity-guide.md  multi-commodity-plan.md  multi-commodity-spec.md  multi-year-simulation.md  nash-cournot-spec.md  platform-plan-d0-d1.md  platform-spec-d0-d1.md  technology-transition.md
ets/: __init__.py  cli.py  config.py  costs.py  gui.py  market.py  participant.py  plotting.py  scenarios.py  simulation.py  webapp.py
examples/: build_k_ets_outlook.py  build_k_msr_scenarios.py  carbon_cap_rule.json  cbam_border_adjustment.json  ccr_cost_containment.json  climate_solutions_advanced_cbam_features.json  climate_solutions_banking_borrowing.json  climate_solutions_cbam_exposure.json  climate_solutions_elastic_policy.json  climate_solutions_k_ets_outlook.json  climate_solutions_mac_pathway.json  climate_solutions_msr_stability.json  climate_solutions_technology_switching.json  (+26 more)
(+485 files in other folders)
